--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 		
 	</head>
 	<body>
+
 		<div id="gameDiv"></div>
+		<div id="instructions">
+			<h3> Instructions </h3>
+			<p> Press the Left or Right arrow keys to move the paddle left or right. </p>
+			<p> Press the space bar to release the ball from the paddle. </p>
+		</div>
 	</body>
 </htm>
